Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.12.6
-
-
a72f9e33dc8fe60ef80eee0ecf97965fc8482fe9
Description
QTextEdit in CAN example doesn't clean buffer that why GUI slows down while receiving CAN frames. That leads to frames loss in read side, especially in "flood traffic" mode.
Another proposal - change QTextEdit to QLabel or something more lightweight.
Attachments
For Gerrit Dashboard: QTBUG-85611 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
330072,33 | CAN example: Replace received frames edit with proper table and model | dev | qt/qtserialbus | Status: MERGED | +2 | 0 |