CAN example: add class based on QAbstractTableModel and Queue

Reason: frames loss in flood traffic mode.

Task-number: QTBUG-85611
Change-Id: Iac4671096c1cbfdc8297acf3c99be960b7eaf010